tests/bad/index_expr.glaz
fn main() {
  _ = 2[1];
}
